apps/immich/base/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  parentRefs:
    - kind: Gateway
      name: traefik
      namespace: kube-system
      sectionName: websecure
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
